--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,6 @@
     <title>page title---page title2</title>
 </head>
 <body>
-    this is testing testing csg davie
-    <div id="div1"></div>
+    <div id="PizzaApp"></div> 
 </body>
 </html>
